[gd_scene load_steps=7 format=2]

[ext_resource path="res://Objects/wooden_crate.png" type="Texture" id=1]
[ext_resource path="res://Objects/WoodenCrate.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 7 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 12 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body/WoodenCrate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "break"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Body/WoodenCrate:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[node name="WoodenCrate" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Body" type="Node2D" parent="."]

[node name="WoodenCrate" type="Sprite" parent="Body"]
position = Vector2( 0, -17 )
texture = ExtResource( 1 )
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, -12 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/break = SubResource( 4 )

[node name="RemoveTimer" type="Timer" parent="."]

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="RemoveTimer" to="." method="_on_RemoveTimer_timeout"]
